Mais arquivos são removidos no make clean

--- a/Trabalho2/Makefile
+++ b/Trabalho2/Makefile
@@ -1,7 +1,7 @@
 # MAKEFILE 
 all: compile
 
-compile: arqlex.l 
+compile:
 	yacc -d arqyacc.y
 	lex arqlex.l
 	gcc lex.yy.c y.tab.c hashmap.c -o myscanner
@@ -9,6 +9,11 @@ compile: arqlex.l
 clean:
 	@rm -rf myscanner
 	@rm -rf lex.yy.c
+	@rm -rf saida1.txt
+	@rm -rf saida2.txt
+	@rm -rf saida3.txt
+	@rm -rf y.tab.c
+	@rm -rf y.tab.h
 
 test:
 	./myscanner < example.txt > saida1.txt
